--- a/gestion_canaimas/view/solicitud_soporte.xml
+++ b/gestion_canaimas/view/solicitud_soporte.xml
@@ -93,7 +93,7 @@
                                     <field name="nombre" attrs="{'readonly':[('id','!=', False)]}" placeholder="Nombre del Alumno"/>
                                     <field name="apellido" attrs="{'readonly':[('id','!=', False)]}" placeholder="Apellido del Alumno"/>
                                     <field name="t_educ" placeholder="Tipo" widget="selection"/>
-                                    <field name="grado" domain= "[('tipo','=',t_educ)]" placeholder="Grado que estudia actualmente" />
+                                    <field name="grado" domain= "[('name','=',t_educ)]" placeholder="Grado que estudia actualmente" />
                                 </group>
                                 <group>
                                     <separator string="Dirección del centro educativo:" colspan="2"/>
@@ -133,6 +133,9 @@
                                 <field name="solucion" />
                         </page>
                     </notebook>
+                    <group string="Exportar Listado de Solicitudes" attrs="{'invisible':[('id','==', False)]}">
+                        <button name="generar_xsl" string="Listado de Solicitudes" type="object" icon="gtk-execute" confirm="¿Esta usted de acuerdo con imprimir el listado de solicitudes?" attrs="{'invisible':[('id','==', False)]}"/>               
+                    </group>
 				</form>
 			</field>			
 		</record>
@@ -155,22 +158,11 @@
             </field>            
         </record>
 
-<!-- Vista Gráficas-->
-<!--         <record model="ir.ui.view" id="solicitud_graph_view">
-            <field name="name">Solicitud</field>
-            <field name="model">solicitud.soporte</field>
-            <field name="arch" type="xml">
-                <graph string="Estadisticas de Solicitud" type="bar">
-                    <field name="status" />
-                    <field name="grafico" operator="+"/>
-                </graph>
-            </field>            
-        </record> -->
 
-<!--Menu-->
-		<menuitem id="main_canaima_menu" name="Gestion de Canaimas" /> 
-		<menuitem id="soporte_canaima_menu" name="Solicitud de Soporte" parent="main_canaima_menu" sequence="1" />
-		<menuitem id="solicitudes_menu" name="Registrar Solicitud" parent="soporte_canaima_menu" action="solicitud_canaima_list_action" />
+	<menuitem id="main_canaima_menu" name="Gestion de Canaimas" /> 
+	<menuitem id="soporte_canaima_menu" name="Solicitud de Soporte" parent="main_canaima_menu" sequence="1" />
+        <menuitem id="menu_reportes_solicitudes" name="Reportes" parent="main_canaima_menu"/>
+	<menuitem id="solicitudes_menu" name="Registrar Solicitud" parent="soporte_canaima_menu" action="solicitud_canaima_list_action" />
 		
     </data>
 </openerp>
