--- a/recursos_humanos/views/proceso_nomina.xml
+++ b/recursos_humanos/views/proceso_nomina.xml
@@ -19,14 +19,16 @@
 		    <form string="Nómina de empleados" version="7.0">
 			<header>
 			    <button name="close_payslip_run" type="object" string="Cerrar Pre nómina" states="draft" class="oe_highlight" confirm="¿Esta seguro que desea cerrar la nómina?" icon="gtk-apply"/>
-			    <button string="Set to Draft" name="draft_payslip_run" type="object" states="close" />
+			    <button string="Borrador" name="draft_payslip_run" type="object" states="close" />
 			    <!--Boton para generar el diskette al banco-->
-			    <button name="generate_txt_slip" type="object" string="Generar diskette al banco" confirm="¿Desea generar el TXT de todos los empleados, correspondientes a la nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'close') ] }" class="oe_highlight"/>
-			    <button name="generate_xsl_slip" type="object" string="Generar Nómina XSL" confirm="¿Desea generar el XSL de todos los empleados, correspondientes a la nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'close') ] }" class="oe_highlight"/>
+			    <button name="generate_txt_slip" type="object" string="Diskette al Banco" confirm="¿Desea generar el TXT de todos los empleados, correspondientes a la nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'close') ] }" class="oe_highlight"/>
+			    <button name="generate_xsl_slip" type="object" string="Resumen de Conceptos por Banco" confirm="¿Desea generar el XSL de todos los empleados, correspondientes a la nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'close') ] }" class="oe_highlight"/>
 			    <!--Boton para crear listado de Pre nomina-->
-			    <button name="generate_pre_slip" type="object" string="Generar Pre-nómina"  confirm="¿Desea generar el listado de la pre nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'draft') ] }" class="oe_highlight"/>
+			    <button name="generate_pre_slip" type="object" string="Pre-nómina"  confirm="¿Desea generar el listado de la pre nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'draft') ] }" class="oe_highlight"/>
 			    <!--Boton para generar la nomina-->
-			    <button name="generate_pre_slip" type="object" string="Generar Nómina"  confirm="¿Desea generar el listado de la Nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'close') ] }" class="oe_highlight"/>
+			    <button name="generate_pre_slip" type="object" string="Resumen de Nómina"  confirm="¿Desea generar el listado de la Nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'close') ] }" class="oe_highlight"/>
+			    <button name="generate_pre_slip" type="object" string="Detallado por Banco"  confirm="¿Desea generar el listado de la Nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'close') ] }" class="oe_highlight"/>
+			    <button name="generate_pre_slip" type="object" string="Resumen por Personal"  confirm="¿Desea generar el listado de la Nómina?" icon="gtk-apply" attrs="{'invisible': [('state', '!=', 'close') ] }" class="oe_highlight"/>
 			    <field name="state" widget="statusbar"/>
 			</header>
 			<div class="oe_form_sheetbg">
@@ -70,19 +72,22 @@
 				    <notebook colspan="4">
 					<page string="Empleado de la nómina">
 					    <div class="div_scroll">
-					    <field name="slip_ids" nolabel="1" mode="tree" domain= "[('class_personal','=',class_personal),('status','=',1)]"/>
+					    <field name="slip_ids" nolabel="1" mode="tree" domain= "[('emp','=',class_personal),('nomina_admin','=',type_slip),('accion','=','1')]"/>
 					    </div>
-					    <div style="margin-left: 600px;">
+					    <div style="width:800px;heigth:150px;" class="oe_form_sheetbg">
 					    <table style="text-align: left;">
 					    <tr>
 						<td>
 						    <font style="color:red;">
-							<button name="mount_slip_ids" type="object" string="Monto" attrs="{'invisible': [('state', '=', 'close') ] }"/>
+							<button name="mount_slip_ids" type="object" string="Monto" attrs="{'invisible': [('state', '=', 'close') ] }" confirm="Desea realizar el calculo para el total de la quincena de este mes?"/>
 						    </font>
 						    <font style="color:white;">--</font>
 						</td>
 						<td>
-						    <field name="mount" style="width:65%%;"/>
+						    <b>Total:</b>
+						</td>
+						<td>
+						    <field name="mount" style="width:65%%;" readonly="1"/>
 						</td>
 					    </tr>
 					    </table>
@@ -99,8 +104,7 @@
 			</div>
 		    </form>
 		</field>
-	</record>
-	
+	</record>	
 	<!--colors="#0A9134:status=='1';#F2081C:status=='5';#000000:status=='2';#0000FF:status=='3';#855C11:status=='4'" toolbar="1"-->
 	<record model="ir.ui.view" id="hr_payslip_employee_tree">
 	    <field name="name">Procesamiento de nómina.tree</field>
@@ -119,7 +123,7 @@
 <!--
 		sequence
 -->		<menuitem name="Nómina" id="recursos_humanos_main" parent="hr.menu_hr_root" sequence="2"/>
-        <menuitem parent="recursos_humanos_main" id="employee_payslip_hr" action="accion_process_payslip_hr_views" name="Procesamiento nóminas" icon="terp-partner" sequence="1"/>
+        <menuitem parent="recursos_humanos_main" id="employee_payslip_hr" action="accion_process_payslip_hr_views" name="Procesamiento nóminas" icon="terp-partner" sequence="2"/>
     
     </data>
 </openerp>
