--- a/desarrollo_social/views/archivos_nominas.xml
+++ b/desarrollo_social/views/archivos_nominas.xml
@@ -27,6 +27,9 @@
 				<field name="parent_id" position="replace">
 					<field name="parent_id" invisible="1"/>
 				</field>
+				<field name="parent_id" position="replace">
+					<field name="fecha_creacion"/>
+				</field>
 			</field>
 		</record>
 		
@@ -43,6 +46,7 @@
 						<field name="stage"/>
 						<field name="parent_id" invisible="1"/>
 						<field name="user_id" invisible="1"/>
+						<field name="fecha_creacion"/>
 						<field name="company_id" invisible="1"/>
 						<field name="create_date" groups="base.group_no_one"/>
 						<field name="write_date" groups="base.group_no_one" invisible="1"/>
