--- a/gestion_eventos/views/gestion_documento.xml
+++ b/gestion_eventos/views/gestion_documento.xml
@@ -16,6 +16,7 @@
                     <label for="name" class="oe_edit_only"/>
                     <h1>
                         <field name="name"/>
+                        <field name="item" invisible="1"/>
                     </h1>
                     <group>
                         <group string="Datos adjunto">
@@ -48,13 +49,14 @@
         <record id="view_doc_tree" model="ir.ui.view">
             <field name="model">ir.documento</field>
             <field name="arch" type="xml">
-                <tree string="Attachments">
+                <tree string="Attachments" colors="#0A9134:item=='todos';#F2081C:item=='asc';#000000:item=='desc';#0000FF:item=='fechas';" toolbar="1">
                     <field name="name"/>
                     <field name="datas_fname"/>
                     <field name="type" invisible="1"/>
                     <field name="company_id" groups="base.group_multi_company"/>
                     <field name="create_uid"/>
                     <field name="create_date"/>
+                    <field name="item" invisible="1"/>
                 </tree>
             </field>
         </record>
